--- a/src/simulation.Rmd
+++ b/src/simulation.Rmd
@@ -60,7 +60,7 @@ e.learning <- effects[6]
 
 ```{r effects-output}
 d.effects <- data.frame(
-  Effect = c("Baseline (Intercept)", "Treatment", "Individual skill", "Crossover Effect (AB)", "Crossover Effect (BA)", "Learning Effect"),
+  Effect = c("Baseline (Intercept)", "Treatment", "Individual skill", "Carryover Effect (AB)", "Carryover Effect (BA)", "Learning Effect"),
   Strength = c(e.baseline, e.treatment, e.skill, e.crossover.AB, e.crossover.BA, e.learning)
 ) 
 
@@ -96,8 +96,47 @@ observations <- participants %>%
   mutate(treatment = (group!=period)) %>% 
   rowwise() %>% 
   mutate(
-    response = rnorm(1, e.baseline + e.treatment*treatment + e.learning*(period-1) + e.skill*skill + e.crossover.AB*(period-1)*(abs(group-2)) + e.crossover.BA*(period-1)*(group-1), 0.3)
+    response = rnorm(1, e.baseline + e.treatment*treatment + e.learning*(period-1) + e.skill*skill + e.crossover.AB*(period-1)*(abs(group-2)), 0.3)
+    #response = rnorm(1, e.baseline + e.treatment*treatment + e.learning*(period-1) + e.skill*skill + e.crossover.AB*(period-1)*(abs(group-2)) + e.crossover.BA*(period-1)*(group-1), 0.3)
   )
+```
+
+We define the carryover effect to be the difference in the response variable in period 2 in the two different groups.
+It does not matter whether we add this difference to the response variable values of group 1 or group 2, as long as we do not add a value to both.
+If we added a value each to both and they both had the same sign, the carryover effect becomes indistinguishable from the learning effect.
+
+## Data Visualization
+
+We visualize the distribution of the response variable stratified by different factors.
+
+```{r vis-treatment}
+observations %>% ggplot(aes(y=as.factor(treatment), x=response)) +
+  geom_boxplot() +
+  labs(x = "Response Variable", y = "Treatment")
+```
+
+```{r vis-learning}
+observations %>% ggplot(aes(y=as.factor(period), x=response)) +
+  geom_boxplot() +
+  labs(x = "Response Variable", y = "Period")
+```
+
+```{r vis-skill}
+observations %>% ggplot(aes(x=skill, y=response)) +
+  geom_point() +
+  labs(x = "Skill", y = "Response Variable")
+```
+
+The visualization of the carryover effect shows how the two sequences differ.
+In group AB, the distribution of the response variable for period 2 is influenced by the inercept, the learning effect, the treatment, and the carryover effect.
+In group BA, the distribution of the response variable for period 2 is only influenced by the intercept and the learning effect.
+
+```{r vis-carryover}
+observations %>% 
+  ggplot(aes(x=as.factor(period), y=response)) +
+  geom_boxplot() +
+  facet_grid(. ~ group, labeller = as_labeller(c("1" = "AB", "2"="BA"))) +
+  labs(x = "Period", y = "Response Variable")
 ```
 
 ## Data Analysis
